# torhave

./: .env  .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  stop_proc.txt  vite.config.ts
frontend/server/: Cargo.toml  deno.json  main.ts
frontend/server/src/: main.rs
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/VideoPlayer/: MovieList.tsx  PlayerControls.tsx  index.tsx  types.ts
frontend/src/features/inspect/: InspectModal.tsx  index.ts  inspect.ts  matroska.ts
server/back/: Cargo.toml
server/back/src/: main.rs
server/back/web/: astro.config.mjs  index.html  package-lock.json  package.json  vite.config.js
server/back/web/src/: App.svelte  app.css  types.ts
server/back/web/src/lib/: ClipRangeModal.svelte
server/back/web/src/pages/: index.astro
server/back/web/src/scripts/: video-player.client.ts
src/: main.rs
