[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "query"] }
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
anyhow = "1.0"
percent-encoding = "2.3"
mime_guess = "2.0"
tokio-util = { version = "0.7.11", features = ["io"] }
